--- a/integumentary.html
+++ b/integumentary.html
@@ -5,33 +5,69 @@
 <body>
 <h1><center>Integumentary System</center></h1>
 <br>
-Hair and Scalp Disorders
+  <b>Hair and Scalp Disorders</b><br>
 <br>
-Cyanosis/Pallor/Pigmentation Disturbances and Disorders of Coloration
+  <b>Cyanosis/Pallor/Pigmentation Disturbances and Disorders of Coloration</b><br>
 <br>
-Nail Disorders
+  <b>Nail Disorders</b><br>
 <Br>
-Skin Lesions/Ulcers and Masses
+  <b>Skin Lesions/Ulcers and Masses</b><br>
 <br>
-Pruritus
+  <b>Pruritus</b><br>
 <br>
-Rashes, Exanthems, and Acne
+  <b>Rashes, Exanthems, and Acne</b><br>
 <br>
-Burns
+  <b>Burns</b><br>
 <br>
-Wounds
+  <b>Wounds</b><br>
 <br>
-Urticaria and Angioedema
+  <b>Urticaria and Angioedema</b><br>
 <br>
-Dermatologic Presentations of Systemic Disease
+  <b>Dermatologic Presentations of Systemic Disease</b><br>
 <br>
-Sweating Disorders
+  <b>Sweating Disorders</b><br>
 <br>
-Bites/Stings/Infestations
+  <b>Bites/Stings/Infestations</b><br>
 <br>
-Physical Exam Findings Related to the Integumentary System
+  <b>Physical Exam Findings Related to the Integumentary System</b><br>
 <br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Integumentary System
+  <b>Laboratory Test Findings and Diagnostic Imaging Related to the Integumentary System</b><br>
 <br>
+  <h2>Normal Processes</h2><br>
+  <b>Embryonic development, fetal maturation, and neonatal changes</b><br>
+  <b>Organ structure and function, including barrier function, thermal regulation</b><br>
+  <b>Cell/tissue structure and function, eccrine function</b><br>
+<b>Repair, regeneration, and changes associated with stage of life (eg, senile purpura, male pattern baldness, postmenopausal hair changes)</b><br>
+  <b>Skin defense mechanisms and normal flora</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis<h2><br>
+  <h3>Infectious, immunologic, and inflammatory disorders<h3><br>
+    <b>Infectious disorders and infestations</b><br>
+    <i>Bacterial</i><br>
+    <i>Cellulitis, erysipelas, impetigo, staphylococcal scalded skin syndrome; abscess, cutaneous, including septic abscess; anthrax (Bacillus anthracis); carbuncle; folliculitis; pilonidal cyst, infected; pyoderma gangrenosum; MSSA and MRSA skin infections; mycobacterial infections (eg, leprosy, draining sinus); scarlet fever (group A Streptococcus)</i><br>
+    <i>Viral</i><br>
+    <i>Herpes simplex type 1 & type 2, herpes zoster, Ramsay-Hunt syndrome; molluscum contagiosum; hand-foot-and-mouth disease; herpangina; parvovirus; chickenpox, erythema infectiosum (fifth disease), rubella, measles, roseola (exanthema subitum); verrucae vulgaris</i><br>
+    <b>Fungal (deep and superficial)</b><br>
+    <i>Candidiasis, skin; dermatophytosis, tinea corporis; dermatomycoses; diaper rash; onychomycosis</i><br>
+    <b>Parasitic</b><br>
+    <i>Cutaneous larva migrans; cutaneous leishmaniasis infestations, nonvenomous bites, stings: scabies; lice; insect bites, including bed bugs</i>
+    <b>Immunologic and inflammatory disorders</b><br>
+<i>Papulosquamous and eczematous dermatoses: psoriasis; lichen planus and lichenoid dermatoses; allergic/irritant contact dermatitis (eg, nickel); dermatoses caused by plants (poison ivy, poison oak)</i><br>
+<i>Vesiculobullous disorders: epidermolysis bullosa; dermatitis herpetiformis; pemphigus; pemphigoid urticaria, erythema, exanthema, and purpura: erythema nodosum; atopic dermatitis; pityriasis rosea; urticaria; Stevens-Johnson syndrome, erythema multiforme, toxic epidermal necrolysis</i><br>
+    <i>Autoimmune disorders: vitiligo</i><br>
+    <b>Neoplasms</b><br>
+<i>Benign neoplasms, cysts and other skin lesions: actinic keratoses; cysts, including epidermal; hemangiomas; lipoma; pigmented nevi; seborrheic keratosis; xanthomas</i><br>
+<i>Malignant neoplasms: basal cell carcinoma; squamous cell carcinoma; melanoma, including genital; Kaposi sarcoma; cutaneous T-cell lymphoma, mycosis fungoides</i><br>
+<b>Adnexal disorders (hair and hair follicles, nails, sweat glands, sebaceous glands, oral mucous membranes)</b><br>
+<i>Disorders of the hair and hair follicles: alopecia; seborrhea capitis/seborrheic dermatitis; tinea barbae and capitis</i><br>
+    <i>Disorders of the nails (including ingrowing nail)</i><br>
+<i>Disorders of sweat and sebaceous glands: acne vulgaris; hidradenitis suppurativa; hyperhidrosis; ichthyosis; rosacea</i><br>
+    <i>Oral disease: aphthous ulcers (stomatitis, canker sores); leukoplakia</i><br>
+    <i>Disorders of pigmentation: albinism; lentigo</i><br>
+    <b>Traumatic and mechanical disorders</b><br>
+    <i>animal bites (dogs, cats, etc); burns or wounds affecting the skin or subcutaneous tissue (eg, sunburn, other including blast injuries and burns); cauliflower ear; effects of ultraviolet light; keloids; tattoo; thermal injury, perniosis, frostbite; ulcers, decubitus</i><br>
+    <b>Congenital disorders</b><br>
+    <i>xeroderma pigmentosum; benign lesions in neonates, infants,children (eg, congenital nevi)</i><br>
+    <b>Adverse effects of drugs on skin and subcutaneous tissue</b><br>
+    <i>drug reactions, eruptions, including local reaction to vaccine </i><br>
 </body>
 </html>
