--- a/integumentary.html
+++ b/integumentary.html
@@ -40,7 +40,7 @@
 <b>Repair, regeneration, and changes associated with stage of life (eg, senile purpura, male pattern baldness, postmenopausal hair changes)</b><br>
   <b>Skin defense mechanisms and normal flora</b><br>
 <h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis<h2><br>
-  <h3>Infectious, immunologic, and inflammatory disorders<h3><br>
+  <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
     <b>Infectious disorders and infestations</b><br>
     <i>Bacterial</i><br>
     <i>Cellulitis, erysipelas, impetigo, staphylococcal scalded skin syndrome; abscess, cutaneous, including septic abscess; anthrax (Bacillus anthracis); carbuncle; folliculitis; pilonidal cyst, infected; pyoderma gangrenosum; MSSA and MRSA skin infections; mycobacterial infections (eg, leprosy, draining sinus); scarlet fever (group A Streptococcus)</i><br>
