--- a/integumentary.html
+++ b/integumentary.html
@@ -46,10 +46,10 @@
     <i>Cellulitis, erysipelas, impetigo, staphylococcal scalded skin syndrome; abscess, cutaneous, including septic abscess; anthrax (Bacillus anthracis); carbuncle; folliculitis; pilonidal cyst, infected; pyoderma gangrenosum; MSSA and MRSA skin infections; mycobacterial infections (eg, leprosy, draining sinus); scarlet fever (group A Streptococcus)</i><br>
     <i>Viral</i><br>
     <i>Herpes simplex type 1 & type 2, herpes zoster, Ramsay-Hunt syndrome; molluscum contagiosum; hand-foot-and-mouth disease; herpangina; parvovirus; chickenpox, erythema infectiosum (fifth disease), rubella, measles, roseola (exanthema subitum); verrucae vulgaris</i><br>
-    <b>Fungal (deep and superficial)</b><br>
+    <i>Fungal (deep and superficial)</i><br>
     <i>Candidiasis, skin; dermatophytosis, tinea corporis; dermatomycoses; diaper rash; onychomycosis</i><br>
     <b>Parasitic</b><br>
-    <i>Cutaneous larva migrans; cutaneous leishmaniasis infestations, nonvenomous bites, stings: scabies; lice; insect bites, including bed bugs</i>
+    <i>Cutaneous larva migrans; cutaneous leishmaniasis infestations, nonvenomous bites, stings: scabies; lice; insect bites, including bed bugs</i><br>
     <b>Immunologic and inflammatory disorders</b><br>
 <i>Papulosquamous and eczematous dermatoses: psoriasis; lichen planus and lichenoid dermatoses; allergic/irritant contact dermatitis (eg, nickel); dermatoses caused by plants (poison ivy, poison oak)</i><br>
 <i>Vesiculobullous disorders: epidermolysis bullosa; dermatitis herpetiformis; pemphigus; pemphigoid urticaria, erythema, exanthema, and purpura: erythema nodosum; atopic dermatitis; pityriasis rosea; urticaria; Stevens-Johnson syndrome, erythema multiforme, toxic epidermal necrolysis</i><br>
@@ -66,8 +66,8 @@
     <b>Traumatic and mechanical disorders</b><br>
     <i>animal bites (dogs, cats, etc); burns or wounds affecting the skin or subcutaneous tissue (eg, sunburn, other including blast injuries and burns); cauliflower ear; effects of ultraviolet light; keloids; tattoo; thermal injury, perniosis, frostbite; ulcers, decubitus</i><br>
     <b>Congenital disorders</b><br>
-    <i>xeroderma pigmentosum; benign lesions in neonates, infants,children (eg, congenital nevi)</i><br>
+    <i>Xeroderma pigmentosum; benign lesions in neonates, infants,children (eg, congenital nevi)</i><br>
     <b>Adverse effects of drugs on skin and subcutaneous tissue</b><br>
-    <i>drug reactions, eruptions, including local reaction to vaccine </i><br>
+    <i>Drug reactions, eruptions, including local reaction to vaccine </i><br>
 </body>
 </html>
