--- a/musculoskeletal.html
+++ b/musculoskeletal.html
@@ -5,37 +5,65 @@
 <body>
 <h1>Musculoskeletal System</h1>
 <br>
-Postural Abnormalities and Spinal Deformities
+  <b>Postural Abnormalities and Spinal Deformities</b><br>
 <br>
-Back Pain and Somatic Dysfunction of the Pelvis, Sacrum, and Lumbar and Thoracic Spine
+  <b>Back Pain and Somatic Dysfunction of the Pelvis, Sacrum, and Lumbar and Thoracic Spine</b><br>
 <br>
-Neck Pain and Somatic Dysfunction of the Cervical Spine
+  <b>Neck Pain and Somatic Dysfunction of the Cervical Spine</b><br>
 <br>
-Gait Disturbances
+  <b>Gait Disturbances</b><br>
 <br>
-Joint Pain, Stiffness, and Swelling
+  <b>Joint Pain, Stiffness, and Swelling</b><br>
 <br>
-Muscle Symptoms
+  <b>Muscle Symptoms</b><br>
 <br>
-Chest Wall Pain and Somatic Dysfunction of the Ribs
+  <b>Chest Wall Pain and Somatic Dysfunction of the Ribs</b><br>
 <br>
-Head, Orofacial, and Temporomandibular Joint Pain and Somatic Dysfunction of the Head
+  <b>Head, Orofacial, and Temporomandibular Joint Pain and Somatic Dysfunction of the Head</b><br>
 <br>
-Pain and Somatic Dysfunction of the Extremities
+  <b>Pain and Somatic Dysfunction of the Extremities</b><br>
 <br>
-Musculoskeletal Trauma, Fractures, and Dislocations
+  <b>Musculoskeletal Trauma, Fractures, and Dislocations</b><br>
 <br>
-Sciatica and Radicular Symptoms
+  <b>Sciatica and Radicular Symptoms</b><br>
 <br>
-Musculoskeletal Masses
+  <b>Musculoskeletal Masses</b><br>
 <br>
-Somatic Manifestations of Systemic Disease
+  <b>Somatic Manifestations of Systemic Disease</b><br>
 <br>
-Viscerosomatic and Related Reflexes
+  <b>Viscerosomatic and Related Reflexes</b><br>
 <br>
-Physical Exam Findings Related to the Musculoskeletal System
+<b>Physical Exam Findings Related to the Musculoskeletal System</b>
 <br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Musculoskeletal System
+  <b>Laboratory Test Findings and Diagnostic Imaging Related to the Musculoskeletal System</b><br>
 <br>
+ <h2>Normal processes</h2><br>
+  <b>Embryonic development, fetal maturation, and perinatal changes</b><br>
+  <b>Organ structure and function</b><br>
+  <b>Cell/tissue structure and function</b><br>
+<i>biology of bones, joints, tendons, skeletal muscle, cartilage exercise and physical conditioning/deconditioning</i><br>
+<b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <h3>Infectious, inflammatory, and immunologic disorders</h3><br>
+  <b>Infectious disorders</b><br>
+  <i>Gangrene, dry and wet, clostridial myonecrosis (Clostridium perfringens); discitis; myositis, infective; necrotizing fasciitis; osteomyelitis; septic arthritis; spondylitis, tuberculous</i><br>
+    <b>Immunologic disorders</b><br>
+    <i>Ankylosing spondylitis; dermatomyositis/polymyositis; juvenile idiopathic arthritis; rheumatoid arthritis, Felty syndrome; psoriatic arthropathy</i><br>
+  <b>Inflammatory disorders</b><br>
+ <i> Adhesive capsulitis of shoulder (frozen shoulder syndrome); ankylosis/spondylopathy (inflammatory); bursitis; fasciitis; osteochondritis, osteochondritis dissecans; tendinitis, supraspinatus syndrome, enthesopathy of spine, elbow, ankle; temporomandibular joint disorders; fibrositis, myofascial pain syndrome; synovitis; tenosynovitis; myositis</i><br>
+  <b>Neoplasms</b><br>
+  <i>Benign neoplasms (e.g., ganglion cyst)</i><br>
+  <i>Malignant neoplasms of bone (e.g. osteosarcoma, sarcoma, leiomyosarcoma, rhabdosarcoma)</i><br>
+  <i>Metastases to bone, secondary malignant neoplasm of bone</i><br>
+  <b>Degenerative and metabolic disorders</i>
+<i>degenerative/metabolic disorders of bone, tendon, and cartilage: chondromalacia; disc degeneration, herniated disc; Legg-Calvé-Perthes disease; Osgood-Schlatter disease; osteodystrophy; osteomalacia; osteonecrosis (avascular), bone infarct; osteoporosis; osteopenia; osteitis deformans (Paget disease of bone); pathologic fracture; radiculopathies; spondylolisthesis/spondylosis (degenerative)</i><br>
+<i>degenerative/metabolic disorders of joints: gout, gouty arthritis, pseudogout; joint effusion; osteoarthritis</i><br>
+<i>degenerative/metabolic disorders of muscles, ligaments, fascia: Dupuytren contracture; muscle calcification and ossification; muscle wasting and diffuse atrophy; rhabdomyolysis</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>amputation and care of amputees; backache, including low back pain; blast injuries; compartment syndrome; contractures, hospital-acquired; contusions; dislocations; fractures; sprains, strains; kyphoscoliosis, scoliosis; rotator cuff syndrome; slipped capital femoral epiphysis; dislocation of hip</i><br>
+  <b>Congenital disorders</b><br>
+  <i>achondroplasia/dwarfism; disorders of limb development (HOX gene mutation, phocomelia); developmental dysplasia of the hip; dislocation of hip in infantile spinal muscular atrophy; genu valgum or varum; foot deformities (flat foot, valgus/varus deformities); osteogenesis imperfecta; McArdle disease; mitochondrial myopathies</i><br>
+  <b>Adverse effects of drugs on the musculoskeletal system</b><br>
+  <i>drug-induced myopathy (eg, steroids, statins, cocaine, AZT); malignant hyperthermia</i><br>
 </body>
 </html>
