--- a/blood.html
+++ b/blood.html
@@ -106,9 +106,54 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
 <i>Hypercoagulable: heparin-induced thrombocytopenia; other coagulopathies (eg, homocysteinemia, hypoplasminogenemia, antithrombin III, protein C/protein S deficiency, Factor V Leiden, anticardiolipin antibodies, lupus anticoagulant, prothrombin G20210A mutation) </i><br>
 <i>Reactions to blood components: ABO incompatibility/anaphylaxis; Rh incompatibility/anaphylaxis; hemolysis, delayed; transfusion reaction; transfusion contaminated with bacteria; transfusion-related acute lung injury (TRALI); anaphylactoid reaction (IgA deficiency)</i><br>
   <b>Traumatic, mechanical, and vascular disorders</b><br>
-  <i>mechanical injury to erythrocytes (eg, cardiac valve hemolysis)</i><br>
-<i>disorders of the spleen; splenic rupture/laceration; splenic infarct; splenic abscess; effects/complications of splenectomy (eg, sepsis due to encapsulated bacteria); hypersplenism </i><br>
+  <i>Mechanical injury to erythrocytes (eg, cardiac valve hemolysis)</i><br>
+<i>Disorders of the spleen; splenic rupture/laceration; splenic infarct; splenic abscess; effects/complications of splenectomy (eg, sepsis due to encapsulated bacteria); hypersplenism </i><br>
   <b>Adverse effects of drugs on the hematologic and lymphoreticular systems</b></br>
   <i>Antiplatelet drugs, antithrombin drugs (eg, dabigatran); chemotherapeutic agents; inhibitors of coagulation factors; methemoglobinemia, acquired; propylthiouracil; tumor lysis syndrome; warfarin </i><br>
-</body>
+  <h2>Normal Processes</h2><br>
+  <b>Embryonic development, fetal maturation, and perinatal transitional changes</b><br>
+  <b>Organ structure and function</b><b>
+<i>Chambers, valves</i><br>
+  <i>Cardiac cycle, mechanics, heart sounds, cardiac conduction</i><br>
+  <i>Hemodynamics, including blood volume and systemic vascular resistance</i><br>
+  <b>Circulation in specific vascular beds, including pulmonary and coronary</i><br>
+  <b>Cell/tissue structure and function</b><br>
+<i>Heart muscle, metabolism, oxygen consumption, biochemistry, and secretory function (eg, atrial natriuretic peptide)</i><br>
+  <i>Endothelium and secretory function, vascular smooth muscle, microcirculation, and lymph flow</i><br>
+<i>Neural and hormonal regulation of the heart, blood vessels, and blood volume, including responses to change in posture, exercise, and tissue metabolism, and autonomic responses</i><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
+  <b>infectious disorders</b><br>
+  <i>bacterial endocarditis, myocarditis</i><br>
+  <b>immunologic and inflammatory disorders</i><br>
+  <i>atherosclerosis (eg, atherosclerosis of the aorta)</i><br>
+  <b>Neoplasms: myxoma, metastases</b><br>
+  <b>Dysrhythmias</b><br>
+  <i>premature beats (PACs, PVCs); atrial flutter/fibrillation; multifocal atrial tachycardia; paroxysmal tachycardias; ventricular tachycardia/fibrillation; wide complex tachycardia; torsades de pointes; bradycardias; atrioventricular block (first-, second-, third-degree); conduction disorder (LBBB, RBBB); cardiac arrest; sick sinus syndrome; prolonged QT syndrome; Wolff-Parkinson-White syndrome; carotid sinus hypersensitivity, pacemaker dysfunction, including failure to sense, capture</i><br>
+  <b>Heart failure</b><br>
+  <i>chordae tendineae rupture; congestive heart failure; cor pulmonale; diastolic dysfunction; systolic dysfunction; mitral valve dysfunction; heart failure secondary to myocardial infarction; high-output heart failure, including thyrotoxicosis-induced, anemia-induced; tachycardia-induced; cardiogenic pulmonary edema</i><br>
+  <b>Ischemic heart disease</b><br>
+  <i>acute coronary syndrome, acute myocardial infarction; angina pectoris, stable and unstable/coronary artery disease/coronary insufficiency; coronary artery spasm</i>
+  <b>Diseases of the myocardium</b><br>
+  <i>cardiomyopathy, dilated, including alcoholic, viral, takotsubo; cardiomyopathy, obstructive hypertrophic; cardiomyopathy, familial dilated; cardiomyopathy, restrictive; hypertensive heart disease, left ventricular hypertrophy, right ventricular hypertrophy; complications of myocardial infarction; nontraumatic tamponade post-myocardial infarction; papillary muscle rupture/dysfunction; ventricular free wall rupture; myocarditis</i><br>
+  <b>Diseases of the pericardium</b><br>
+  <i>chronic constrictive pericarditis; pericardial effusion; pericardial tamponade; acute pericarditis; pericarditis, following myocardial infarction, surgery, trauma</i><br>
+  <b>Valvular heart disease</b><br>
+  <i>valve disorders, mitral/aortic/tricuspid, pulmonic (eg, regurgitation, stenosis, prolapse, insufficiency, vegetation); functional murmurs; rheumatic heart disease; complications of artificial valves</i><br>
+  <b>Hypotension: orthostatic hypotension</b><br>
+  <b>Hypertension</b><br>
+  <i>elevated blood pressure reading without diagnosis of hypertension; essential hypertension; malignant hypertension; secondary hypertension</i><br>
+  <b>Dyslipidemia</b><br> 
+  <i>hypercholesterolemia; hyperlipidemia; hypertriglyceridemia; lipoproteins/lipoprotein lipase deficiency</i><br>
+  <b>Vascular disorders</b>
+<i>disorders of the great vessels: aneurysm, aortic (abdominal/thoracic), dissection, ruptured; aneurysm, iliac, other peripheral vascular, ruptured; aortoiliac disease; peripheral arterial vascular disease: arterial embolus/thrombosis; arteriovenous fistula; atheroembolic disease; claudication; cholesterol emboli; hypertensive vascular disease; peripheral arterial disease; thromboangiitis obliterans diseases of the veins: deep venous thrombosis, venous thromboembolism; phlebitis/thrombophlebitis; varicose veins; venous insufficiency; stasis ulcers, stasis dermatitis</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>ventricular puncture; myocardial contusion; myocardial rupture; traumatic aortic dissection; traumatic tamponade</i><br>
+  <b>Congenital disorders, including disease in adults</b><br>
+  <i>anomalous left coronary artery; atrial septal defect; coarctation of the aorta; endocardial cushion defect; patent foramen ovale; patent ductus arteriosus; tetralogy of Fallot; transposition of the great vessels; ventricular septal defect</i><br>
+  <b>Adverse effects of drugs on the cardiovascular system</b><br>
+  <i>adriamycin; cocaine, amphetamine, PCP; ACE inhibitors, calcium channel blockers, alpha blockers, minoxidil</i><br>
+  
+  </body>
 </html>
