--- a/blood.html
+++ b/blood.html
@@ -112,7 +112,7 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
   <i>Antiplatelet drugs, antithrombin drugs (eg, dabigatran); chemotherapeutic agents; inhibitors of coagulation factors; methemoglobinemia, acquired; propylthiouracil; tumor lysis syndrome; warfarin </i><br>
   <h2>Normal Processes</h2><br>
   <b>Embryonic development, fetal maturation, and perinatal transitional changes</b><br>
-  <b>Organ structure and function</b><b>
+  <b>Organ structure and function</b><br>
 <i>Chambers, valves</i><br>
   <i>Cardiac cycle, mechanics, heart sounds, cardiac conduction</i><br>
   <i>Hemodynamics, including blood volume and systemic vascular resistance</i><br>
