--- a/blood.html
+++ b/blood.html
@@ -116,7 +116,7 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
 <i>Chambers, valves</i><br>
   <i>Cardiac cycle, mechanics, heart sounds, cardiac conduction</i><br>
   <i>Hemodynamics, including blood volume and systemic vascular resistance</i><br>
-  <b>Circulation in specific vascular beds, including pulmonary and coronary</i><br>
+  <b>Circulation in specific vascular beds, including pulmonary and coronary</b><br>
   <b>Cell/tissue structure and function</b><br>
 <i>Heart muscle, metabolism, oxygen consumption, biochemistry, and secretory function (eg, atrial natriuretic peptide)</i><br>
   <i>Endothelium and secretory function, vascular smooth muscle, microcirculation, and lymph flow</i><br>
