--- a/blood.html
+++ b/blood.html
@@ -126,7 +126,7 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
   <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
   <b>infectious disorders</b><br>
   <i>bacterial endocarditis, myocarditis</i><br>
-  <b>immunologic and inflammatory disorders</i><br>
+  <b>immunologic and inflammatory disorders</b><br>
   <i>atherosclerosis (eg, atherosclerosis of the aorta)</i><br>
   <b>Neoplasms: myxoma, metastases</b><br>
   <b>Dysrhythmias</b><br>
