--- a/blood.html
+++ b/blood.html
@@ -134,7 +134,7 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
   <b>Heart failure</b><br>
   <i>chordae tendineae rupture; congestive heart failure; cor pulmonale; diastolic dysfunction; systolic dysfunction; mitral valve dysfunction; heart failure secondary to myocardial infarction; high-output heart failure, including thyrotoxicosis-induced, anemia-induced; tachycardia-induced; cardiogenic pulmonary edema</i><br>
   <b>Ischemic heart disease</b><br>
-  <i>acute coronary syndrome, acute myocardial infarction; angina pectoris, stable and unstable/coronary artery disease/coronary insufficiency; coronary artery spasm</i>
+  <i>acute coronary syndrome, acute myocardial infarction; angina pectoris, stable and unstable/coronary artery disease/coronary insufficiency; coronary artery spasm</i><br>
   <b>Diseases of the myocardium</b><br>
   <i>cardiomyopathy, dilated, including alcoholic, viral, takotsubo; cardiomyopathy, obstructive hypertrophic; cardiomyopathy, familial dilated; cardiomyopathy, restrictive; hypertensive heart disease, left ventricular hypertrophy, right ventricular hypertrophy; complications of myocardial infarction; nontraumatic tamponade post-myocardial infarction; papillary muscle rupture/dysfunction; ventricular free wall rupture; myocarditis</i><br>
   <b>Diseases of the pericardium</b><br>
