--- a/respiratory.html
+++ b/respiratory.html
@@ -5,29 +5,29 @@
 <body>
 <h1>Respiratory System</h1>
 <br>
-Cough
+   <b>Cough</b>
 <br>
-Sore Throat
+   <b>Sore Throat</b>
 <Br>
-Shortness of Breath
+   <b>Shortness of Breath</b>
 <br>
-Nasal Bleeding
+   <b>Nasal Bleeding</b>
 <br>
-Airway Obstruction
+   <b>Airway Obstruction</b>
 <Br>
-Nasal Discharge
+   <b>Nasal Discharge</b>
 <br>
-Ear Pain/Ear Discharge
+   <b>Ear Pain/Ear Discharge</b>
 <br>
-Respiratory Arrest
+   <b>Respiratory Arrest</b>
 <br>
-Respiratory Chest Pain
+   <b>Respiratory Chest Pain</b>
 <br>
-Respiratory Growths and Malformations
+   <b>Respiratory Growths and Malformations</b>
 <br>
-Physical Exam Findings Related to the Respiratory System
+   <b>Physical Exam Findings Related to the Respiratory System</b>
 <br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Respiratory System <br>
+   <b>Laboratory Test Findings and Diagnostic Imaging Related to the Respiratory System </b><br>
    <form>
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A.  </label><br>
@@ -39,5 +39,46 @@ Laboratory Test Findings and Diagnostic Imaging Related to the Respiratory Syste
   <label for="other"> D. </label><br>
 </form> 
   Answer: <p style="color:white"></p>
+   <h2>Normal Processes</h2><br>
+   <b>Embryonic development, fetal maturation, and perinatal changes</b><br>
+   <b>Organ structure and function</b><br>
+   <i>Airways, including mechanics and regulation of breathing</i><br>
+   <i>lung parenchyma, including ventilation, perfusion, gas exchange </i><br>
+   <i>pleura</i><br>
+   <i>nasopharynx, sinuses</i><br>
+   <b>Cell/tissue structure and function, including surfactant formation, and alveolar structure</b><br>
+   <b>Repair, regeneration, and changes associated with stage of life</b><br>
+   <b>Pulmonary defense mechanisms and normal flora</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+   <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
+   <b>Infectious, immunologic, and inflammatory disorders of the upper airways</b><br>
+   <i>Acute upper respiratory infection: viral infections (adenovirus, coronaviruses, coxsackievirus, influenza virus, parainfluenza virus, rhinoviruses); sinusitis; nasopharyngitis; epiglottitis; Bordetella pertussis pneumonia; croup; acute laryngitis; acute laryngotracheitis; tracheitis; pharyngitis; streptococcal throat infections; tonsillitis; peritonsillar abscess; rhinitis, allergic, chronic; ulcers of nasal cavity/sinuses</i><br>
+<i>infectious, immunologic, and inflammatory disorders of the lower airways: hospital acquired pneumonia; ventilator-associated pneumonia, community-acquired pneumonia, acute bronchiolitis; bronchiolitis obliterans with organizing pneumonia (BOOP); anthrax, pulmonary (Bacillus anthracis); aspiration pneumonia, pneumonitis; bronchitis, acute; bronchopneumonia; pneumonia (Burkholderia pseudomallei, Chlamydophila pneumoniae, Coxiella burnetii, Francisella tularensis, Haemophilus influenzae, Klebsiella pneumoniae, Legionella, Moraxella catarrhalis, Mycoplasma pneumoniae, Pseudomonas aeruginosa, Streptococcus, MSSA, MRSA, other gram‐negative bacteria); viral infection (eg, influenza A, B, adenovirus, H1N1, respiratory syncytial virus, parainfluenza virus); fungal infection (aspergillosis, including allergic bronchopulmonary aspergillosis and aspergilloma, histoplasmosis, coccidioidomycosis, Pneumocystis jirovecii); pulmonary tuberculosis; lung abscess; viral infection (eg, influenza A, B, adenovirus, respiratory syncytial virus, parainfluenza virus, avian influenza virus); fungal infection (aspergillosis, including allergic bronchopulmonary aspergillosis and aspergilloma, histoplasmosis, coccidioidomycosis, Pneumocystis jirovecii)</i><br>
+   <b>Neoplasms</b><br>
+   <i>Benign neoplasms</i><br>
+   <i>upper airways (eg, vocal cord polyps, nasal polyps, juvenile papillomatosis); lungs and pleura (eg, solitary pulmonary nodule, bronchial carcinoid tumors)</i><br>
+   <i>Malignant neoplasms</i><br>
+   <i>upper airways: lip, oral cavity, and pharynx; head and neck cancer; larynx; trachea</i><br>
+<i>lower airways and pleura: malignant neoplasms of bronchus and/or lung (squamous cell, adenocarcinoma, large cell, small cell); malignant neoplasms of pleura (mesothelioma); secondary malignant neoplasms of lung; secondary malignant neoplasms of pleura</i><br>
+   <i>metastatic neoplasms including pleural</i><br>
+   <b>Obstructive airway disease</b><br>
+   <i>asthma, reactive airway disease; bronchiectasis; chronic airway obstruction; chronic obstructive pulmonary disease (COPD), chronic bronchitis, emphysema</i><br>
+   <b>Pneumoconiosis/fibrosing/restrictive pulmonary disorders/interstitial lung disease</b><br>
+<i>pneumoconiosis; asbestosis; silicosis; silo-filler's lung, byssinosis, bagassosis, berylliosis; hypersensitivity pneumonitis; hypereosinophilic syndromes, Loeffler syndrome; interstitial pneumonia, usual (UIP), desquamative (DIP), nonspecific</i><br>
+   <b>Respiratory failure/respiratory arrest and pulmonary vascular disorders</b><br>
+   <i>acute respiratory distress syndrome (ARDS); pulmonary hypertension; pulmonary vascular disorders, arteriovenous fistula; pulmonary edema, pulmonary cause and unspecified; pulmonary embolism; air and fat embolism; respiratory failure due to enteral feeding</i><br>
+   <b>Metabolic, regulatory, and structural disorders</b><br>
+   <i>disorders of gas exchange; hypoventilation; hypoxia; pulmonary alveolar proteinosis; ventilation-perfusion imbalance</i><br>
+   <b>Disorders of the pleura, mediastinum, and chest wall</b><br>
+   <i>chylothorax; costochondritis; empyema; hemothorax; mediastinitis; pleural effusion; pleuritis; pneumomediastinum; pneumothorax</i>
+   <b>Traumatic and mechanical disorders</b>
+<i>upper airways: epistaxis; barotrauma, sinus; laryngeal/pharyngeal obstruction; tracheoesophageal fistula; tracheal stenosis; tracheomalacia; trauma (eg, tracheal
+   injury); foreign body (nose, pharynx, larynx, trachea); traumatic/mechanical</i><br>
+   <i>disorders of the nasal cavity/sinuses (eg, septal perforation)</i><br>
+<i>lower airways and pleura: atelectasis; diaphragm/chest wall injury; drowning and neardrowning; foreign body, upper and lower respiratory tract; penetrating chest wounds; pulmonary contusion; sleep apnea, obstructive and central; hypoventilation syndrome, obesity-hypoventilation syndrome</i><br>
+   <b>Congenital disorders</b><br>
+   <i>bronchogenic cysts; congenital cysts; congenital diaphragmatic hernia; pulmonary sequestration; immotile cilia syndrome</i><br>
+   <b>Adverse effects of drugs on the respiratory system</b><br>
+   <i>bleomycin, amiodarone; adverse effects of 100% oxygen; acute effects of tobacco/nicotine, inhalants, cocaine</i><br>
 </body>
 </html>
